--- a/Education.html
+++ b/Education.html
@@ -52,7 +52,9 @@
                         </div>
                         <div class="inner">
                             <h1>Isothermal Community College</h1>
-                            <h3>A.B.A Associate of Applied Science </h3>
+                            <h3>Associate of Applied Science in Business Adminstration </h3>
+			    <h3>General Business Specialty</h3>
+
                             <H3><i>2019 - 2021 GPA: 3.610</i></H3>
                             <h3>I graduated with honors at Isothermal Community College in 2021 with an Assoicate of Applied Science of Business Adminstration-General Business Specialty.
                                 I obtained my certificate and diploma of business adminstration during my pursuit for an assoicate degree.
