--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 									<h4>PLATFORMS USED: Excel</h4>
 									<p>Skills include Pivot Tables, If Function, Dashboards, Charts, Sorting / Filters</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Joshua-Keller/Excel-Projects/blob/main/Bike%20Sales%20Analysis.xlsx" class="button">View Code Here</a></li>
+										<li><a href="https://github.com/Joshua-Keller/Excel-Projects/blob/main/Bike%20Sales%20Analysis.xlsx" class="button">View Project Here</a></li>
 									</ul>
 								</div>
 							</div>
