--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								<div class="inner">
 									<h2>Rock, Paper, Scissors with a twist!</h2>
 									<h4>PLATFORMS USED: Pycharm</h4>
-									<p>Skills include</p>
+									<p>Skills include While loop, Random, If statements, List </p>
 									<ul class="actions">
 										<li><a href="https://github.com/Joshua-Keller/Python-Projects/blob/main/Rock%2CPaper%2CScissors%2CLizard%2CSpock.py" class="button">View Code Here</a></li>
 									</ul>
